--- a/files/views/inventory/list.ejs
+++ b/files/views/inventory/list.ejs
@@ -12,11 +12,12 @@
         <h1 ><%= title %></h1>
        
         <div>
-            <a href="/inventory/add" class="btn btn-info align-self-end" role="button">
+            <a href="/inventory/add" class="btn btn-primary align-self-end" role="button">
                 <i class="fas fa-plus-circle"></i> 
                 Add a new Item
             </a>                
         </div>
+
 
         <div class="table-responsive" >
             <table class="table table-bordered table-striped table-hover" style="color:azure">
@@ -37,7 +38,7 @@
                         <td class="text-center"><%= InventoryList[count].contact %></td>
                         <td class="text-center"><%= InventoryList[count].email %></td>
                         <td class="text-center">
-                            <a href="/inventory/edit/<%= InventoryList[count]._id %>" class="btn btn-primary btn-sm">
+                            <a href="/inventory/edit/<%= InventoryList[count]._id %>" class="btn btn-info btn-sm">
                             <i class="fas fa-pencil-alt"></i></a>
                         </td>
                         <td class="text-center">
