--- a/files/views/partials/footer.ejs
+++ b/files/views/partials/footer.ejs
@@ -55,8 +55,12 @@ t Id: 301167163 -->
 </footer>
  
   <!-- scripts used  -->
-  <script src="/jquery/dist/jquery.min.js"></script>
-  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/jquery/dist/jquery.min.js"></script>
+<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+<script>
+    var getTitle = "<%= title %>"
+</script>
+<script src="/javascripts/appclient.js"></script>
   
 </body>
 </html>
