--- a/files/views/auth/signup.ejs
+++ b/files/views/auth/signup.ejs
@@ -2,11 +2,11 @@
 <% include ../partials/header.ejs %>
 <div class="jumbotron" style="background-color:#171d25">
     <div class="jumbotron" style="background-color:#11161b">
-<div class="container">
+<div class="container" style="color:rgb(195, 255, 255)">
     <div class="row">
 
-        <div class="offset-md-3 col-md-3">
-            <h1><%= title %></h1>
+        <div class="offset-md-4 col-md-5">
+            <h1 align="center" style="color:rgb(47, 247, 247)">Register User</h1>
 
             <% for(var i in messages) { %>
                 <div class="flash"><%= messages[i] %></div>
@@ -14,30 +14,30 @@
             <form action="/users/signup" method="post" validate>
                 <div class="form-group">
                     <label>First Name:</label>
-                    <input type="text" name="firstname" value="<%= user.firstname %>" class="form-control"/>
+                    <input type="text" name="firstname" value="<%= user.firstname %>" class="form-control" placeholder="Enter First Name"/>
                 </div>
                 <div class="form-group">
                     <label>Last Name:</label>
-                    <input type="text" name="lastname" value="<%= user.lastname %>" class="form-control"/>
+                    <input type="text" name="lastname" value="<%= user.lastname %>" class="form-control"placeholder="Enter Last Name"/>
                 </div>
                 <div class="form-group">
                     <label>Email:</label>
-                    <input type="text" name="email" value="<%= user.email %>" class="form-control"/>
+                    <input type="text" name="email" value="<%= user.email %>" class="form-control"placeholder="Enter a Valid Email Address"/>
                 </div>
                 <div class="form-group">
                     <label>Username:</label>
-                    <input type="text" name="username" value="<%= user.username %>" class="form-control"/>
+                    <input type="text" name="username" value="<%= user.username %>" class="form-control" placeholder="Enter New Username"/>
                 </div>
                 <div class="form-group">
                     <label>Password:</label>
-                    <input type="password" name="password" value="<%= user.password %>" class="form-control"/>
+                    <input type="password" name="password" value="<%= user.password %>" class="form-control"placeholder="Enter Password"/>
                 </div>
                 <div class="form-group">
                     <label>Confirm Password:</label>
-                    <input type="password" name="password_confirm" class="form-control"/>
+                    <input type="password" name="password_confirm" class="form-control"placeholder="Passwords should match"/>
                 </div>
                 <br>
-                <div>
+                <div align="center">
                     <input class="btn btn-primary" type="submit" value="Sign-up" />
                 </div>
             </form>
