--- a/files/views/inventory/add_edit.ejs
+++ b/files/views/inventory/add_edit.ejs
@@ -45,16 +45,21 @@
                     >
                 </div>
                 <br />
-
+                <!-- confirm update -->
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> 
                     Submit
                 </button>
-                
+                <!-- delete record -->
+                <a href="/inventory/delete/<%= item._id %>" class="btn btn-danger">
+                    <i class="fas fa-trash alt"> Delete</i>
+                </a>
+                <!-- go back to list page -->
                 <a href="/inventory/list" class="btn btn-warning">
                     <i class="fas fa-undo"></i> 
                     Cancel
                 </a>
+                
 
             </form>
         </div>
