--- a/files/views/inventory/list.ejs
+++ b/files/views/inventory/list.ejs
@@ -7,20 +7,11 @@
 <!-- Main Content -->
 <div class="jumbotron" style="background-color:#171d25">
     <div class="jumbotron" style="background-color:#11161b">
-<main class="container" style="color:rgb(4, 253, 253)">
-    <div style="text-align:center;" class="row">
-        <h1 ><%= title %></h1>
-       
-        <div>
-            <a href="/inventory/add" class="btn btn-primary align-self-end" role="button">
-                <i class="fas fa-plus-circle"></i> 
-                Add a new Item
-            </a>                
-        </div>
-
-
+<main class="container">
+    <h1 align="center" style="color:rgb(47, 247, 247)">Business Contact List </h1>
+    <div  style="text-align:center;" class="row">
         <div class="table-responsive" >
-            <table class="table table-bordered table-striped table-hover" style="color:azure">
+            <table class="table table-hover" style="color:azure">
                 <!-- Header Row-->
                 <tr>
                     <th class="text-center">Name</th>
@@ -28,7 +19,6 @@
                     <th class="text-center">Email</th>
                     <th class="text-center" colspan="2">Actions</th>
                 </tr>
-
                 <!-- Repeatable Template Row -->
 
                 <% for(let count = 0; count < InventoryList.length; count++) { %>
@@ -38,11 +28,11 @@
                         <td class="text-center"><%= InventoryList[count].email %></td>
                         <td class="text-center">
                             <a href="/inventory/edit/<%= InventoryList[count]._id %>" class="btn btn-info btn-sm">
-                            <i class="fas fa-pencil-alt"></i></a>
+                            <i class="fas fa-pencil-alt"></i> Update</a>
                         </td>
                         <td class="text-center">
                             <a href="/inventory/delete/<%= InventoryList[count]._id %>" class="btn btn-danger btn-sm">
-                            <i class="fas fa-trash-alt"></i></a>
+                            <i class="fas fa-trash-alt"></i> Delete</a>
                         </td>
                     </tr>
                 <% } %>
