--- a/files/views/partials/header.ejs
+++ b/files/views/partials/header.ejs
@@ -87,10 +87,11 @@ Student Id: 301167163 -->
     
 
           <li class="nav-item">  
+            
             <% if (typeof userName == 'string' && userName) { %>
-              <a class="nav-link" href="/users/signout" onclick="return confirm('Are you sure?')">Sign Out (<%= userName %>)</a>
+              <a class="nav-link" href="/users/signout" onclick="return confirm('Are you sure?')"><i style="color:#66FCF1" class="fas fa-sign-out-alt"></i> Sign Out (<%= userName %>)</a>
             <% } else { %>
-              <a class="nav-link" href="/users/signin">Signin</a>
+              <a class="nav-link" href="/users/signin"><i style="color:#66FCF1" class="fas fa-sign-in-alt"></i> Signin</a>
             <% } %>            
           </li> 
 
