--- a/files/views/error.ejs
+++ b/files/views/error.ejs
@@ -1,7 +1,8 @@
 <!-- 
 Name : Daivik Shetty
 Student Id: 301167163 -->
-
+<%- include partials/header.ejs %>
     <h1><%= message %></h1>
     <h2><%= error.status %></h2>
     <pre><%= error.stack %></pre>
+<%- include partials/footer.ejs %>
