--- a/files/views/inventory/list.ejs
+++ b/files/views/inventory/list.ejs
@@ -11,6 +11,13 @@
     <h1 align="center" style="color:rgb(47, 247, 247)">Business Contact List </h1>
     <div  style="text-align:center;" class="row">
         <div class="table-responsive" >
+
+            <div>
+                <a href="/inventory/add" class="btn btn-primary align-self-end" role="button">
+                    <i class="fas fa-plus-circle"></i> 
+                    Add a new Item
+                </a>                
+            </div>
             <table class="table table-hover" style="color:azure">
                 <!-- Header Row-->
                 <tr>
